// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CookieNotice with darkTheme should render basically 1`] = `<CookieNotice />`;

exports[`CookieNotice with darkTheme should render fully 1`] = `
<CookieNotice
  acceptButtonLabel="acceptButtonLabel"
  borderRadius={32}
  cookieExpiration={30}
  cookieTextLabel="cookieTextLabel"
  darkTheme={true}
  justifyContent="space-between"
  maxWidth={1000}
  openInNewTab={false}
  readMoreButtonLabel="readMoreButtonLabel"
  readMoreButtonLink="readMoreButtonLink"
  reverseButtons={false}
/>
`;

exports[`CookieNotice without darkTheme should render basically 1`] = `<CookieNotice />`;

exports[`CookieNotice without darkTheme should render fully 1`] = `
<CookieNotice
  acceptButtonLabel="acceptButtonLabel"
  borderRadius={32}
  cookieExpiration={30}
  cookieTextLabel="cookieTextLabel"
  darkTheme={false}
  justifyContent="space-between"
  maxWidth={1000}
  openInNewTab={false}
  readMoreButtonLabel="readMoreButtonLabel"
  readMoreButtonLink="readMoreButtonLink"
  reverseButtons={false}
/>
`;
